# src/api/api-paths.ts
@@ -167,8 +167,6 @@ export interface components {
     ChatRequest: {
       /** @default 1 */
       n_choices?: number;
-      /** @default false */
-      stream?: boolean;
       /** @default 0.7 */
       temperature?: number;
       text: string;
